[tool.poetry]
name = "cv-project"
version = "0.1.0"
description = ""
authors = ["Alchemist of the web <nikitakzntcv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.12.0.88"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
